force-app/main/default/objects/Ticket_Tier__c/Ticket_Tier__c.object-meta.xml
<CustomObject>
    <description>Ticket tiers for Public Events — Early Bird, General Admission, VIP etc.</description>
    <label>Ticket Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>