force-app/main/default/objects/Ticket_Tier__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <description>Perks included with this tier</description>
    <label>Benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>