force-app/main/default/objects/Ticket_Tier__c/fields/Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Public__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck for invite-only tiers</description>
    <label>Is Public</label>
    <type>Checkbox</type>
</CustomField>