force-app/main/default/objects/Ticket_Tier__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Cannot be changed after first ticket sold</description>
    <label>Price</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>