force-app/main/default/objects/Ticket_Tier__c/fields/Qty_Available__c.field-meta.xml
<CustomField>
    <fullName>Qty_Available__c</fullName>
    <label>Quantity Available</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>