force-app/main/default/objects/Ticket_Tier__c/fields/Qty_Held__c.field-meta.xml
<CustomField>
    <fullName>Qty_Held__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Reserved for sponsors/press/VIPs. Cannot exceed 5% of Qty_Available__c.</description>
    <label>Held Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>