force-app/main/default/objects/Ticket_Tier__c/fields/Qty_Public__c.field-meta.xml
<CustomField>
    <fullName>Qty_Public__c</fullName>
    <description>Auto-calculated — tickets available to the public</description>
    <formula>Qty_Available__c - Qty_Held__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Public Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>