force-app/main/default/objects/Ticket_Tier__c/fields/Qty_Sold__c.field-meta.xml
<CustomField>
    <fullName>Qty_Sold__c</fullName>
    <label>Quantity Sold</label>
    <summaryFilterItems>
        <field>Attendee__c.Checkin_Status__c</field>
        <operation>notEqual</operation>
        <value>Refunded</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendee__c.Ticket_Tier__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>