force-app/main/default/objects/Ticket_Tier__c/fields/Sales_End__c.field-meta.xml
<CustomField>
    <fullName>Sales_End__c</fullName>
    <label>Sales End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>