force-app/main/default/objects/Ticket_Tier__c/fields/Sales_Start__c.field-meta.xml
<CustomField>
    <fullName>Sales_Start__c</fullName>
    <label>Sales Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>