force-app/main/default/objects/Ticket_Tier__c/validationRules/Held_Qty_Max_Five_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Held_Qty_Max_Five_Percent</fullName>
    <active>true</active>
    <errorConditionFormula>Qty_Held__c &gt; (Qty_Available__c * 0.05)</errorConditionFormula>
    <errorDisplayField>Qty_Held__c</errorDisplayField>
    <errorMessage>Held quantity cannot exceed 5% of Quantity Available</errorMessage>
</ValidationRule>