force-app/main/default/objects/Ticket_Tier__c/validationRules/Price_Locked_After_Sale.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Locked_After_Sale</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED(Price__c),
  Qty_Sold__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Price cannot be changed after tickets have been sold — close this tier and create a new one</errorMessage>
</ValidationRule>