force-app/main/default/objects/Ticket_Tier__c/validationRules/Sales_End_Within_Event_Window.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_End_Within_Event_Window</fullName>
    <active>true</active>
    <errorConditionFormula>Sales_End__c &gt; Event__r.Sales_Close_Date__c</errorConditionFormula>
    <errorDisplayField>Sales_End__c</errorDisplayField>
    <errorMessage>Sales End Date cannot be after the Event&apos;s Sales Close Date</errorMessage>
</ValidationRule>