force-app/main/default/objects/Ticket_Tier__c/validationRules/Sales_Start_Within_Event_Window.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Start_Within_Event_Window</fullName>
    <active>true</active>
    <errorConditionFormula>Sales_Start__c &lt; Event__r.Sales_Open_Date__c</errorConditionFormula>
    <errorDisplayField>Sales_Start__c</errorDisplayField>
    <errorMessage>Sales Start Date cannot be before the Event&apos;s Sales Open Date</errorMessage>
</ValidationRule>